--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
 
     <div class="last-text">
-        <p>Developed with love by Rana Pratap</p>
+        <p>Developed with ❤️ by Rana Pratap</p>
     </div>
 
     <a href="#" class="top"><i class='bx bx-up-arrow-alt' ></i></a>
