--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <br>expertise is to create and website design, Fronend design and Backend design.</p>
             <div class="home-sci">
                 <a href="https://www.facebook.com/raja.ranu.7330/" style="--i:7"><i class='bx bxl-facebook' ></i></a>
-                <a href="https://wa.me/7525962251?text=hello"><i class='bx bxl-whatsapp' ></i></a>
+                <a href="https://wa.me/?text=hello"><i class='bx bxl-whatsapp' ></i></a>
                 <a href="https://www.instagram.com/eh.rana.pratap/" style="--i:9"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://github.com/im-rana-pratap" style="--i:10"><i class='bx bxl-github' ></i></a>
             </div>
@@ -260,3 +260,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
